--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Artic-Tech</title>
-    <link rel="stylesheet" href="./css/index.css">
     <!-- bootstrap link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
-<body>
+<body class="text-capitalize">
     <!-------------------
          navbar 
     ----------------------->
@@ -48,7 +48,53 @@
         </div>
       </nav>
 
+      <!----------------------
+        start header area 
+        ------------------------------->
 
+        <header>
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner w-100 position-relative " >
+                  <div class="carousel-item active background w-100">
+                    <img src="./images/cover/cover-1.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block position-absolute top-50 start-50 translate-middle w-50">
+                      <h1 class="display-3 fw-normal">Get Started Digital Learning</h1>
+                      <p class="fs-5 fst-italic">a learning method based on the use of new digital tools to enable learners to learn in a different way</p>
+                      <button class=" btn btn-primary px-4 py-2"><a class="text-decoration-none text-white fs-5" href="">Get Started <i class="fa-solid fa-angle-right"></i> </a></button>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./images/cover/cover-2.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block position-absolute top-50 start-50 translate-middle w-50 ">
+                      <h1 class="display-3 fw-normal">Digital classrooms</h1>
+                      <p class="fs-5 fst-italic">Digital classrooms are classrooms that utilize technology as a means of education</p>
+                      <button class=" btn btn-primary px-4 py-2"><a class="text-decoration-none text-white fs-5" href="">Get Started <i class="fa-solid fa-angle-right"></i> </a></button>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block position-absolute top-50 start-50 translate-middle w-50">
+                      <h1 class="display-3 fw-normal">digital technologies</h1>
+                      <p class="fs-5 fst-italic">Digital technologies are electronic tools, systems, devices and resources that generate, store or process data.</p>
+                      <button class=" btn btn-primary px-4 py-2"><a class="text-decoration-none text-white fs-5" href="">Get Started <i class="fa-solid fa-angle-right"></i> </a></button>
+                    </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+        </header>
 
 
 
