--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                   <div class="carousel-item active background w-100">
                     <img src="./images/cover/cover-1.png" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block position-absolute top-50 start-50 translate-middle w-50">
-                      <h1 class="display-3 fw-normal">Get Started Digital Learning</h1>
+                      <h1 class="display-3 fw-bold text-light">Get Started Digital Learning</h1>
                       <p class="fs-5 fst-italic">a learning method based on the use of new digital tools to enable learners to learn in a different way</p>
                       <button class=" btn btn-primary px-4 py-2"><a class="text-decoration-none text-white fs-5" href="">Get Started <i class="fa-solid fa-angle-right"></i> </a></button>
                     </div>
@@ -71,7 +71,7 @@
                   <div class="carousel-item">
                     <img src="./images/cover/cover-2.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block position-absolute top-50 start-50 translate-middle w-50 ">
-                      <h1 class="display-3 fw-normal">Digital classrooms</h1>
+                      <h1 class="display-3 fw-bold text-light">Digital classrooms</h1>
                       <p class="fs-5 fst-italic">Digital classrooms are classrooms that utilize technology as a means of education</p>
                       <button class=" btn btn-primary px-4 py-2"><a class="text-decoration-none text-white fs-5" href="">Get Started <i class="fa-solid fa-angle-right"></i> </a></button>
                     </div>
@@ -79,7 +79,7 @@
                   <div class="carousel-item">
                     <img src="./images/cover/cover-3.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block position-absolute top-50 start-50 translate-middle w-50">
-                      <h1 class="display-3 fw-normal">digital technologies</h1>
+                      <h1 class="display-3 fw-bold text-light">digital technologies</h1>
                       <p class="fs-5 fst-italic">Digital technologies are electronic tools, systems, devices and resources that generate, store or process data.</p>
                       <button class=" btn btn-primary px-4 py-2"><a class="text-decoration-none text-white fs-5" href="">Get Started <i class="fa-solid fa-angle-right"></i> </a></button>
                     </div>
@@ -95,6 +95,183 @@
                 </button>
               </div>
         </header>
+        <!----------------------
+           start main section 
+          --------------------------->
+          <main class="container mt-5">
+            <section>
+              <div class="mx-auto text-center mb-5 w-75">
+                <h2 class="fw-bold h1 mb-2">Discover Our Popular Courses</h2>
+                <p class="fs-5 fw-normal">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+              </div>
+              <div class="row g-3">
+                <div class="col-6">
+                  <div class="h-100 d-flex justify-content-between align-items-center shadow border">
+                    <img  src="./images/course/course-1.png" class="card-img-top img-fluid w-25 " alt="...">
+                    <div class="card-body w-75 py-0">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text align-self-top ">This is a longercard with supporting text below. </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-6">
+                  <div class=" h-100 d-flex justify-content-between align-items-center shadow">
+                    <img src="./images/course/course-2.png" class="card-img-top w-25  img-fluid" alt="...">
+                    <div class="card-body w-75">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-6">
+                  <div class=" h-100 d-flex justify-content-between align-items-center shadow">
+                    <img src="./images/course/course-3.png" class="card-img-top w-25  img-fluid" alt="...">
+                    <div class="card-body w-75">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-6">
+                  <div class=" h-100 d-flex justify-content-between align-items-center shadow">
+                    <img src="./images/course/course-4.png" class="card-img-top w-25  img-fluid" alt="...">
+                    <div class="card-body w-75">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-6">
+                  <div class=" h-100 d-flex justify-content-between align-items-center shadow">
+                    <img src="./images/course/course-5.png" class="card-img-top img-fluid w-25" alt="...">
+                    <div class="card-body w-75">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-6">
+                  <div class=" h-100 d-flex justify-content-between align-items-center shadow">
+                    <img src="./images/course/course-6.png" class="card-img-top w-25 img-fluid" alt="...">
+                    <div class="card-body w-75">
+                      <h5 class="card-title ">Card title</h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </section>
+
+            <!------------------------
+               modal section 
+              ------------------------------>
+            <section class=" modal-area bg-primary mt-5 rounded-3">
+              <div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+                <div class="modal-dialog modal-dialog-centered">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalToggleLabel">Register</h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body mx-auto">
+                      <form action="">
+                          <label class=" fs-5" for="">first name:</labelc><br>
+                          <input type="text" placeholder="enter your first name" >
+                        <br>
+                          <label class="mt-2 fs-5" for="">last name:</label><br>
+                          <input type="text" placeholder="enter your last name" >
+                        <br>
+                          <label class="mt-2 fs-5" for="">email:</label><br>
+                          <input type="email" name="" id="" required placeholder="enter your email" >
+                        <br>
+                          <label class="mt-2 fs-5" for="">password:</label><br>
+                          <input type="password" required placeholder="enter your password " >
+                        <br>
+                          <label for="">gander</label>
+                          <br>
+                         <div class="d-flex">
+                          <input type="radio" name="gander" id=""><label for="">male</label><br>
+                          <input class="ms-3" type="radio" name="gander" id=""><label for="">female</label><br>
+                          <input class="ms-3" type="radio" name="gander" id=""><label for="">other</label>
+                         </div>
+                          <br>
+                          <div class=" d-flex justify-content-between w-75">
+                            <input type="submit" class="btn btn-success" value="submit">
+                            <input type="reset" class="btn btn-danger" value="reset">
+                          </div>
+                      </form>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="d-flex justify-content-between h-100 w-75 mx-auto align-items-center" >
+                <div class="w-75 text-white">
+                  <h2 class="fs-1">Ready to join?</h2>
+                  <p class="fs-6">It is a long established fact that a reader will be distracted by <br> the readable content of a page when looking at its layout.</p>
+                </div>
+                <a class="btn bg-white text-primary fs-5 outline-danger" data-bs-toggle="modal" href="#exampleModalToggle" role="button">Register Now</a>
+              </div>
+            </section>
+            <!---------------------
+               accordion section 
+              ----------------------------- -->
+            <section class="mt-5 ">
+              <div class=" mx-auto text-center w-75">
+                <h1 class="fw-bold">Frequently Asked Questions</h1>
+                <p class="mb-5 fs-5">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+              </div>
+              <div class="accordion" id="accordionPanelsStayOpenExample">
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                    <button class="accordion-button fs-5" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                      What is the difference between flexbox and grid?
+                    </button>
+                  </h2>
+                  <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+                    <div class="accordion-body h6">
+                      <strong>Grid is made for two-dimensional layout while Flexbox is for one.</strong> This means Flexbox can work on either row or columns at a time, but Grids can work on both. Flexbox, gives you more flexibility while working on either element (row or column). HTML markup and CSS will be easy to manage in this type of scenario.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                    <button class="accordion-button collapsed fs-5" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                      What is the difference between bootstrap and tailwind?
+                    </button>
+                  </h2>
+                  <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+                    <div class="accordion-body fs-6">
+                     <strong>Bootstrap comes with a set of pre-styled responsive, mobile-first components that possess a definite UI kit. Tailwind CSS uses a set of utility classes to create a neat UI with more flexibility and uniqueness.</strong> Sites created using Bootstrap follow the generic pattern that makes them look identical.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                    <button class="accordion-button collapsed fs-5" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                      what is css box model?
+                    </button>
+                  </h2>
+                  <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+                    <div class="accordion-body">
+                      In CSS, the term "box model" is used when talking about design and layout. The CSS box model is essentially a box that wraps around every HTML element. It consists of: margins, borders, padding, and the actual content.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                    <button class="accordion-button collapsed fs-5" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                    what is semantic tag?
+                    </button>
+                  </h2>
+                  <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+                    <div class="accordion-body ">
+                      The HTML semantics refers to the tags that provide meaning to an HTML page rather than just presentation. It makes HTML more comprehensible by better defining the different sections and layout of web pages.
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </section>
+          </main>
 
 
 
