--- a/index.html
+++ b/index.html
@@ -271,6 +271,47 @@
                 </div>
               </div>
             </section>
+
+            <!---------------------
+                  company logo 
+            ------------------------ -->
+            <section class="my-5 d-none d-lg-block">
+              <div class="text-center">
+                <h2 class="fw-bold mb-4">Trusted by over 800+ companies</h2>
+              </div>
+              <div class="row g-4">
+                  <div class="col-2 ">
+                      <div>
+                        <img class="img-fluid w-75" src="./images/company/company-1.png" alt="">
+                      </div>
+                  </div>
+                  <div class="col-2">
+                    <div>
+                      <img class="img-fluid w-75" src="./images/company/company-2.png" alt="">
+                    </div>
+                  </div>
+                  <div class="col-2">
+                    <div>
+                      <img class="img-fluid w-75" src="./images/company/company-3.png" alt="">
+                    </div>
+                  </div>
+                  <div class="col-2">
+                    <div>
+                      <img class="img-fluid w-75" src="./images/company/company-4.png" alt="">
+                    </div>
+                  </div>
+                  <div class="col-2">
+                    <div>
+                      <img class="img-fluid w-75" src="./images/company/company-5.png" alt="">
+                    </div>
+                  </div>
+                  <div class="col-2">
+                    <div>
+                      <img class="img-fluid w-75" src="./images/company/company-6.png" alt="">
+                    </div>
+                  </div>
+              </div>
+            </section>
           </main>
 
 
