--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         start header area 
         ------------------------------->
 
-        <header>
+        <header class="container">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -62,7 +62,7 @@
                 <div class="carousel-inner w-100 position-relative " >
                   <div class="carousel-item active background w-100">
                     <img src="./images/cover/cover-1.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block position-absolute top-50 start-50 translate-middle w-50">
+                    <div class="carousel-caption d-md-block position-absolute top-50  start-50 translate-middle w-75">
                       <h1 class="display-3 fw-bold text-light">Get Started Digital Learning</h1>
                       <p class="fs-5 fst-italic">a learning method based on the use of new digital tools to enable learners to learn in a different way</p>
                       <button class=" btn btn-primary px-4 py-2"><a class="text-decoration-none text-white fs-5" href="">Get Started <i class="fa-solid fa-angle-right"></i> </a></button>
@@ -70,7 +70,7 @@
                   </div>
                   <div class="carousel-item">
                     <img src="./images/cover/cover-2.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block position-absolute top-50 start-50 translate-middle w-50 ">
+                    <div class="carousel-caption d-md-block position-absolute top-50 start-50 translate-middle w-75 ">
                       <h1 class="display-3 fw-bold text-light">Digital classrooms</h1>
                       <p class="fs-5 fst-italic">Digital classrooms are classrooms that utilize technology as a means of education</p>
                       <button class=" btn btn-primary px-4 py-2"><a class="text-decoration-none text-white fs-5" href="">Get Started <i class="fa-solid fa-angle-right"></i> </a></button>
@@ -78,7 +78,7 @@
                   </div>
                   <div class="carousel-item">
                     <img src="./images/cover/cover-3.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block position-absolute top-50 start-50 translate-middle w-50">
+                    <div class="carousel-caption d-md-block position-absolute top-50 start-50 translate-middle w-75">
                       <h1 class="display-3 fw-bold text-light">digital technologies</h1>
                       <p class="fs-5 fst-italic">Digital technologies are electronic tools, systems, devices and resources that generate, store or process data.</p>
                       <button class=" btn btn-primary px-4 py-2"><a class="text-decoration-none text-white fs-5" href="">Get Started <i class="fa-solid fa-angle-right"></i> </a></button>
@@ -104,61 +104,70 @@
                 <h2 class="fw-bold h1 mb-2">Discover Our Popular Courses</h2>
                 <p class="fs-5 fw-normal">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
               </div>
-              <div class="row g-3">
-                <div class="col-6">
-                  <div class="h-100 d-flex justify-content-between align-items-center shadow border">
-                    <img  src="./images/course/course-1.png" class="card-img-top img-fluid w-25 " alt="...">
-                    <div class="card-body w-75 py-0">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text align-self-top ">This is a longercard with supporting text below. </p>
+              <div class="row g-4">
+                <div class="col-lg-6 col-md-12">
+                  <div class="h-100 d-flex justify-content-between flex-md-row flex-column align-items-top shadow-lg border rounded-3">
+                    <img  src="./images/course/course-1.png" class="card-img-top img-fluid " alt="...">
+                    <div class="card-body py-0 mx-auto">
+                      <h5 class="card-title mt-2 fs-3">Fundamental Of UI/UX Design</h5>
+                      <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                      <p class="fs-5 text-primary">Price : 20$</p>
                     </div>
                   </div>
                 </div>
-                <div class="col-6">
-                  <div class=" h-100 d-flex justify-content-between align-items-center shadow">
-                    <img src="./images/course/course-2.png" class="card-img-top w-25  img-fluid" alt="...">
-                    <div class="card-body w-75">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a longer card with supporting text below as a natural.</p>
+                <div class=" h-100 col-lg-6 col-md-12 ">
+                  <div class="h-100 d-flex flex-md-row flex-column justify-content-between align-items-top shadow-lg rounded-3">
+                    <img src="./images/course/course-2.png" class="card-img-top  img-fluid" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title fs-3 ">Javascript Basic to advanced</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card</p>
+                      <p class="fs-5 text-primary">Price : 20$</p>
                     </div>
                   </div>
                 </div>
-                <div class="col-6">
-                  <div class=" h-100 d-flex justify-content-between align-items-center shadow">
-                    <img src="./images/course/course-3.png" class="card-img-top w-25  img-fluid" alt="...">
-                    <div class="card-body w-75">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a longer card with supporting text below as a natural.</p>
+                <div class="col-lg-6 col-md-12">
+                  <div class=" h-100 d-flex justify-content-between flex-md-row flex-column align-items-top shadow-lg rounded-3">
+                    <img src="./images/course/course-3.png" class="card-img-top img-fluid" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title fs-3">Fullstack Web Development</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card</p>
+                      <p class="fs-5 text-primary">Price : 20$</p>
                     </div>
                   </div>
                 </div>
-                <div class="col-6">
-                  <div class=" h-100 d-flex justify-content-between align-items-center shadow">
-                    <img src="./images/course/course-4.png" class="card-img-top w-25  img-fluid" alt="...">
-                    <div class="card-body w-75">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a longer card with supporting text below as a natural.</p>
+                <div class="col-lg-6 col-md-12">
+                  <div class=" h-100 d-flex justify-content-between flex-md-row flex-column align-items-top shadow-lg rounded-3">
+                    <img src="./images/course/course-4.png" class="card-img-top  img-fluid" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title fs-3">Digital Marketing</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                      <p class="fs-5 text-primary">Price : 20$</p>
                     </div>
                   </div>
                 </div>
-                <div class="col-6">
-                  <div class=" h-100 d-flex justify-content-between align-items-center shadow">
-                    <img src="./images/course/course-5.png" class="card-img-top img-fluid w-25" alt="...">
-                    <div class="card-body w-75">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a longer card with supporting text below as a natural.</p>
+                <div class="col-lg-6 col-md-12 ">
+                  <div class=" h-100 d-flex justify-content-between flex-md-row flex-column align-items-top shadow-lg rounded-3">
+                    <img src="./images/course/course-5.png" class="card-img-top img-fluid " alt="...">
+                    <div class="card-body ">
+                      <h5 class="card-title fs-3">Photography Basic Rules</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card</p>
+                      <p class="fs-5 text-primary">Price : 20$</p>
                     </div>
                   </div>
                 </div>
-                <div class="col-6">
-                  <div class=" h-100 d-flex justify-content-between align-items-center shadow">
-                    <img src="./images/course/course-6.png" class="card-img-top w-25 img-fluid" alt="...">
-                    <div class="card-body w-75">
-                      <h5 class="card-title ">Card title</h5>
-                      <p class="card-text">This is a longer card with supporting text below as a natural.</p>
+                <div class="col-lg-6 col-md-12">
+                  <div class=" h-100 d-flex justify-content-between flex-md-row flex-column align-items-top shadow-lg rounded-3">
+                    <img src="./images/course/course-6.png" class="card-img-top img-fluid" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title fs-3  ">Motion Graphics</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card.</p>
+                      <p class="fs-5 text-primary">Price : 20$</p>
                     </div>
                   </div>
                 </div>
+              </div>
+              <div class="text-center mt-5">
+                <button class="btn btn-primary px-4 py-2"><a class="text-white fs-5 text-decoration-none" href="">View All</a></button>
               </div>
             </section>
 
@@ -204,7 +213,7 @@
                   </div>
                 </div>
               </div>
-              <div class="d-flex justify-content-between h-100 w-75 mx-auto align-items-center" >
+              <div class="d-flex justify-content-lg-between justify-content-sm-center flex-sm-column flex-lg-row h-100 w-75 mx-auto align-items-center text-lg-start text-sm-center justify-content-center flex-column text-center" >
                 <div class="w-75 text-white">
                   <h2 class="fs-1">Ready to join?</h2>
                   <p class="fs-6">It is a long established fact that a reader will be distracted by <br> the readable content of a page when looking at its layout.</p>
@@ -215,7 +224,7 @@
             <!---------------------
                accordion section 
               ----------------------------- -->
-            <section class="mt-5 ">
+            <article class="mt-5  mx-auto ">
               <div class=" mx-auto text-center w-75">
                 <h1 class="fw-bold">Frequently Asked Questions</h1>
                 <p class="mb-5 fs-5">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
@@ -258,19 +267,19 @@
                   </div>
                 </div>
                 <div class="accordion-item">
-                  <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-                    <button class="accordion-button collapsed fs-5" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                  <h2 class="accordion-header" id="panelsStayOpen-headingfour">
+                    <button class="accordion-button collapsed fs-5" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapsefour" aria-expanded="false" aria-controls="panelsStayOpen-collapsefour">
                     what is semantic tag?
                     </button>
                   </h2>
-                  <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+                  <div id="panelsStayOpen-collapsefour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingfour">
                     <div class="accordion-body ">
                       The HTML semantics refers to the tags that provide meaning to an HTML page rather than just presentation. It makes HTML more comprehensible by better defining the different sections and layout of web pages.
                     </div>
                   </div>
                 </div>
               </div>
-            </section>
+            </article>
 
             <!---------------------
                   company logo 
@@ -313,6 +322,21 @@
               </div>
             </section>
           </main>
+          <footer class="mt-5">
+            <div class="w-100 h-100 d-flex justify-content-center align-items-center text-center bg-dark">
+              <div class="text-white">
+                <h3 class="mb-4">ARTIC</h3>
+                <p class="blockquote-footer">Office 41, Zawaya Buildin, Ghala Muscat, <br> Sultanate of Oman</p>
+                <p>Privacy Ploicy  |   Terms of use</p>
+                <div class="justify-content-evenly d-flex fs-3 text-white">
+                  <p><a href=""><i class="fa-brands fa-square-facebook text-white"></i></a></p>
+                  <p><a href=""><i class="fa-brands fa-twitter text-white"></i></a></p>
+                  <p><a href=""><i class="fa-brands fa-telegram text-white"></i></a></p> 
+                  <p><a href=""><i class="fa-brands fa-linkedin text-white"></i></a></p>
+                </div>
+              </div>
+            </div>
+          </footer>
 
 
 
