--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
               </div>
               <div class="row g-4">
                 <div class="col-lg-6 col-md-12">
-                  <div class="h-100 d-flex justify-content-between flex-md-row flex-column align-items-top shadow-lg border rounded-3">
-                    <img  src="./images/course/course-1.png" class="card-img-top img-fluid " alt="...">
-                    <div class="card-body py-0 mx-auto">
+                  <div class=" h-100 d-flex justify-content-between flex-md-row flex-column align-items-top shadow-lg border rounded-3">
+                    <img  src="./images/course/course-1.png" class="card-img-top img-fluid h-auto " alt="...">
+                    <div class="card-body py-0 mx-auto ">
                       <h5 class="card-title mt-2 fs-3">Fundamental Of UI/UX Design</h5>
                       <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card.</p>
                       <p class="fs-5 text-primary">Price : 20$</p>
@@ -170,7 +170,39 @@
                 <button class="btn btn-primary px-4 py-2"><a class="text-white fs-5 text-decoration-none" href="">View All</a></button>
               </div>
             </section>
-
+            <!----------------------
+               explore elearning institute
+              ----------------------------->
+            <section class="elearning mt-5">
+                <div class="row g-6">
+                  <div class="col-md-6 col-12 ">
+                      <img class="img-fluid h-100 " src="./images/working.png" alt="">
+                  </div>
+                  <div class="col-md-6 col-12">
+                    <div class=" h-100 d-flex justify-content-center align-items-md center flex-column align-items-stretch">
+                      <h2 class="fs-1 mt-2">Explore The elearning Institute</h2>
+                      <p> A learning system based on formalised teaching but with the help of electronic resources is known as E-learning. While teaching can be based in or out of the classrooms, <span class="d-md-block d-none">
+                        the use of computers and the Internet forms the major component of E-learning. E-learning can also be termed as a network enabled transfer of skills and knowledge, and the delivery of education is made to a large number of recipients at the same or different times.
+                      </span> </p>
+                      <div class="d-flex justify-content-between align-items-center my-3 flex-wrap ">
+                        <div>
+                          <h2>3.2k+</h2>
+                          <p>online course</p>
+                        </div>
+                        <div>
+                          <h2>600+</h2>
+                          <p>expert member</p>
+                        </div>
+                        <div>
+                          <h2>1k+</h2>
+                          <p>rating & review</p>
+                        </div>
+                      </div>
+                      <button class="btn btn-primary align-self-start mb-3 px-3 "><a class="text-white fs-5  text white text-decoration-none text-capitalize " href="" >read more</a></button>
+                    </div>
+                  </div>
+                </div>
+            </section>
             <!------------------------
                modal section 
               ------------------------------>
@@ -180,7 +212,7 @@
                   <div class="modal-content">
                     <div class="modal-header">
                       <h5 class="modal-title" id="exampleModalToggleLabel">Register</h5>
-                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body mx-auto">
                       <form action="">
