main section area modify

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-6 col-md-12">
+                <div class="col-lg-6 col-md-12 d-lg-block d-none">
                   <div class=" h-100 d-flex justify-content-between flex-md-row flex-column align-items-top shadow-lg rounded-3">
                     <img src="./images/course/course-4.png" class="card-img-top  img-fluid" alt="...">
                     <div class="card-body">
@@ -145,7 +145,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-6 col-md-12 ">
+                <div class="col-lg-6 col-md-12 d-lg-block d-none ">
                   <div class=" h-100 d-flex justify-content-between flex-md-row flex-column align-items-top shadow-lg rounded-3">
                     <img src="./images/course/course-5.png" class="card-img-top img-fluid " alt="...">
                     <div class="card-body ">
@@ -155,7 +155,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-6 col-md-12">
+                <div class="col-lg-6 col-md-12 d-lg-block d-none">
                   <div class=" h-100 d-flex justify-content-between flex-md-row flex-column align-items-top shadow-lg rounded-3">
                     <img src="./images/course/course-6.png" class="card-img-top img-fluid" alt="...">
                     <div class="card-body">
@@ -253,6 +253,14 @@
                 <a class="btn bg-white text-primary fs-5 outline-danger" data-bs-toggle="modal" href="#exampleModalToggle" role="button">Register Now</a>
               </div>
             </section>
+            <!----------------------------
+                  successfull student lis
+                --------------------------->
+              <section>
+                <div class="row">
+                  .col-
+                </div>
+              </section>
             <!---------------------
                accordion section 
               ----------------------------- -->
