optional successfull student list add

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <img src="./images/cover/cover-1.png" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-md-block position-absolute top-50  start-50 translate-middle w-75">
                       <h1 class="display-3 fw-bold text-light">Get Started Digital Learning</h1>
-                      <p class="fs-5 fst-italic">a learning method based on the use of new digital tools to enable learners to learn in a different way</p>
+                      <p class="fs-5 fst-italic">Digital learning" is a learning method based on the use of new digital tools to enable learners to learn in a different way</p>
                       <button class=" btn btn-primary px-4 py-2"><a class="text-decoration-none text-white fs-5" href="">Get Started <i class="fa-solid fa-angle-right"></i> </a></button>
                     </div>
                   </div>
@@ -173,7 +173,7 @@
             <!----------------------
                explore elearning institute
               ----------------------------->
-            <section class="elearning mt-5">
+            <section class="mt-5">
                 <div class="row g-6">
                   <div class="col-md-6 col-12 ">
                       <img class="img-fluid h-100 " src="./images/working.png" alt="">
@@ -254,11 +254,42 @@
               </div>
             </section>
             <!----------------------------
-                  successfull student lis
+                  successfull student list
                 --------------------------->
-              <section>
-                <div class="row">
-                  .col-
+              <section class="mt-5">
+                <div>
+                  <h1 class="fw-bold">Meet Our Successfull Students</h1>
+                  <p class="fs-5 mb-4">List of our successful students. They are working in different companies</p>
+                </div>
+                <div class="row g-3">
+                  <div class="col-lg-3 col-md-6 col-12">
+                    <div class="shadow p-2 rounded">
+                      <img class="img-fluid w-100" src="./images/student/student-1.png" alt="">
+                    <h3 class="mt-3">Awlad Hossain</h3>
+                    <p>UIUX Designer</p>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 col-md-6 col-12">
+                    <div class="shadow p-2 rounded">
+                      <img class="img-fluid w-100" src="./images/student/student-2.png" alt="">
+                      <h3  class="mt-3">Jannatul Islam</h3>
+                      <p>Motion Design</p>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 col-md-6 col-12">
+                    <div class="shadow p-2 rounded">
+                      <img class="img-fluid w-100" src="./images/student/student-3.png" alt="">
+                      <h3  class="mt-3">Imran Hossain</h3>
+                      <p>Graphic Designer</p>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 col-md-6 col-12">
+                    <div class="shadow p-2 rounded">
+                      <img class="img-fluid w-100" src="./images/student/student-4.png" alt="">
+                      <h3  class="mt-3">Nishi Akter</h3>
+                      <p>Web Developer</p>
+                    </div>
+                  </div>
                 </div>
               </section>
             <!---------------------
